--- a/wa.user.css
+++ b/wa.user.css
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.3.1
+@version      2.3.2
 @license      MIT
 ==/UserStyle== */
 
@@ -47,8 +47,8 @@
     --chat-bg-i: 0.6;
     --c-m-hover: 1s;
     --ui-font: "custom font", "Segoe UI", "Helvetica Neue", Helvetica, "Lucida Grande", Arial, Ubuntu, Cantarell, "Fira Sans", sans-serif;
-    --version: "Dark-WhatsApp v2.3.1 — March 27th, 2020";
-    --message: "Hotfix for the latest update is out, report broken things on GitHub so that we can fix them. 🎉 🥳 I published an important update about my userstyles, please read it: ";
+    --version: "Dark-WhatsApp v2.3.2 — March 27th, 2020";
+    --message: "Another update is out, report broken things on GitHub so that we can fix them. 🎉 🥳 I published an important update about my userstyles, please read it: ";
     --changes: "https://vednoc.me/blog/the-end-of-an-era";
   }
   @supports (-moz-user-select: none) {
@@ -77,10 +77,10 @@
     color: var(--light) !important;
     border-color: var(--darker) !important;
   }
-  .Fzl83 {
+  .uyEaY {
     margin-right: 24px;
   }
-  .Fzl83::before {
+  .uyEaY::before {
     color: var(--lighter) !important;
   }
   body option {
@@ -217,16 +217,20 @@
   body [id *= "startup"] circle {
     stroke: var(--light);
   }
-  body ._3pkG4 {
+  body .hYvJ8 {
     color: var(--light) !important;
     background-color: var(--darken) !important;
     box-shadow: inset 0 0 0 1px var(--darker), var(--bshadow);
   }
-  body ._3pkG4 button {
+  body .hYvJ8 button {
     color: var(--accent) !important;
   }
-  body ._2WwbV,
-  body .FPZFa {
+  body ._3JEcM {
+    color: var(--lighter) !important;
+    border-color: var(--lighter) !important;
+    background-color: var(--darken) !important;
+  }
+  body ._2e8Mu {
     color: var(--accent) !important;
     border-color: var(--accent) !important;
     background-color: var(--darken) !important;
@@ -295,23 +299,21 @@
   [data-mention-jid]:hover span {
     text-decoration: underline !important;
   }
-  body ._1Zo-R {
+  .me9CP {
     border-color: var(--lighter) !important;
     background-color: var(--darken) !important;
   }
-  body ._15wNI {
+  ._1VD7W {
     border-color: var(--accent) !important;
     background-color: var(--accent) !important;
   }
-  body ._3j8Pd path:not([fill = "#009588"]) {
+  body .rAUz7 path:not([fill = "#009588"]) {
     fill-opacity: 0.55;
   }
-  body ._3j8Pd.GPmgF,
-  body ._3j8Pd.GPmgf {
+  body .rAUz7._3TbsN {
     background-color: var(--darker) !important;
   }
-  body ._3j8Pd.GPmgF:not(#z):not(#y) [data-icon] path,
-  body ._3j8Pd.GPmgf:not(#z):not(#y) [data-icon] path {
+  body .rAUz7._3TbsN:not(#z):not(#y) [data-icon] path {
     fill-opacity: 1 !important;
   }
   body ._10YBz,
@@ -332,7 +334,7 @@
   body svg[width = "34"][height = "34"] circle {
     stroke: var(--lighter);
   }
-  body ._1JS2G {
+  body .WX_XW {
     color: var(--light) !important;
     background-color: rgba(25,25,25,0.502) !important;
     border-radius: 0 !important;
@@ -340,28 +342,31 @@
   body #group-invite-link-anchor {
     color: var(--accent) !important;
   }
-  .OZVc4 ._3N5w5::-webkit-slider-runnable-track {
+  ._2jPGD {
+    background-color: var(--darker) !important;
+  }
+  ._2jPGD ._3y8EC::-webkit-slider-runnable-track {
     background-color: var(--t) !important;
   }
-  .OZVc4 ._3N5w5::-moz-range-progress,
-  .OZVc4 ._3N5w5::-moz-range-track {
+  ._2jPGD ._3y8EC::-moz-range-progress,
+  ._2jPGD ._3y8EC::-moz-range-track {
     background-color: var(--t) !important;
   }
-  .OZVc4 ._2bTRm ._2ZXtj {
+  ._2jPGD ._1y1Zk {
     background-color: var(--accent) !important;
   }
-  ._3Nf6W {
+  ._3wbrC {
     background-color: var(--t) !important;
   }
-  ._3Nf6W + ::-moz-range-progress,
-  ._3Nf6W + ::-moz-range-thumb {
+  ._3wbrC + ::-moz-range-progress,
+  ._3wbrC + ::-moz-range-thumb {
     background-color: var(--accent) !important;
   }
-  ._3Nf6W + ::-moz-range-track {
+  ._3wbrC + ::-moz-range-track {
     height: 2px;
     background-color: #808080 !important;
   }
-  ._1p-0O {
+  .llRZq {
     box-shadow: 0 4px 12px 2px var(--sh-h) !important;
   }
   #app > div::after {
@@ -471,22 +476,21 @@
     left: 0;
     background-color: var(--dark) !important;
   }
-  .overlay[data-animate-media-viewer] > div:first-child {
+  .overlay ._2YdsD,
+  .overlay ._3pRd1 {
     background-color: var(--darken) !important;
     box-shadow: 0 1px var(--darker);
   }
-  .overlay[data-animate-media-viewer] > div:first-child div:not([style *= "height"]) {
-    color: var(--light) !important;
-    border-color: var(--t) !important;
-    background-color: var(--t) !important;
-  }
-  .overlay[data-animate-media-viewer] > div:first-child .xD91K {
+  .overlay ._2YdsD ._1AwDx,
+  .overlay ._3pRd1 ._1AwDx {
     color: var(--lighter) !important;
   }
-  .overlay[data-animate-media-viewer] > div:first-child ._3H4MS {
+  .overlay ._2YdsD ._25Ooe,
+  .overlay ._3pRd1 ._25Ooe {
     color: var(--light) !important;
   }
-  .overlay[data-animate-media-viewer] > div:first-child ._2EXPL:not(#z):hover {
+  .overlay ._2YdsD ._2EXPL:not(#z):hover,
+  .overlay ._3pRd1 ._2EXPL:not(#z):hover {
     background-color: var(--t) !important;
   }
   .overlay .I72vi {
@@ -521,21 +525,21 @@
   .overlay ._2yVvV {
     color: var(--light) !important;
   }
-  .overlay [role = "button"]._23_1v {
+  .overlay [role = "button"]._1WZqU {
     color: var(--lighter) !important;
   }
-  .overlay [role = "button"]._23_1v:hover {
+  .overlay [role = "button"]._1WZqU:hover {
     color: var(--light) !important;
     background-color: var(--darken) !important;
     box-shadow: none;
   }
-  .overlay [role = "button"]._3PQ7V {
+  .overlay [role = "button"]._1WZqU.PNlAR {
     color: var(--white) !important;
     background-color: var(--accent) !important;
     box-shadow: var(--bshadow);
     transition: 0.15s ease;
   }
-  .overlay [role = "button"]._3PQ7V:hover {
+  .overlay [role = "button"]._1WZqU.PNlAR:hover {
     opacity: 0.8;
   }
   .overlay [data-animate-modal-popup]:not(._2ILbv) {
@@ -589,10 +593,6 @@
   }
   ._1CnF3 > div {
     padding: 22px 24px 20px !important;
-  }
-  ._1CnF3 [role = "button"] {
-    color: var(--white) !important;
-    background-color: var(--accent) !important;
   }
   .overlay [data-animate-modal-body] ._1BdTk {
     border-left: none;
@@ -656,7 +656,7 @@
   .overlay .NWyjc.AZ3xD {
     margin: 16px;
   }
-  ._2vOyW._26EsD .lz4Mo {
+  .cFkAx._2ojWN ._3FR9x {
     color: var(--light) !important;
   }
   [data-animate-status-v3-modal-background = "true"] {
@@ -739,6 +739,10 @@
     opacity: 1;
     fill-opacity: 1 !important;
   }
+  span[class][data-icon][data-icon *= "chevron-"] > svg > path,
+  span[class][data-icon][data-icon = "down-context"] > svg > path {
+    fill-opacity: 0.55;
+  }
   span[class][data-icon][data-icon*="logo-"] > svg > path {
     fill-opacity: 0.6 !important;
   }
@@ -818,13 +822,13 @@
   span[class][data-icon *= "-dblcheck"] path {
     fill: var(--lighter) !important;
   }
-  span[class][data-icon *= "-dblcheck-ack"] path span[data-icon *= "-dblcheck"] path,
-  .a5DO0 span[data-icon *= "-dblcheck"] path,
-  ._2lSfP span[data-icon *= "-dblcheck"] path {
+  span[class][data-icon *= "-dblcheck-ack"] path,
+  .a5DO0 span[data-icon *= "-dblcheck"] path {
     fill: var(--accent) !important;
   }
   ._2lSfP[data-icon *= "-dblcheck"]:not(#z) path,
-  ._209Po[data-icon *= "-dblcheck"]:not(#z) path {
+  ._1xtH9[data-icon *= "-dblcheck"]:not(#z) path,
+  .wrS81[data-icon *= "-dblcheck"]:not(#z) path {
     fill: var(--accent) !important;
   }
   span[class][data-icon *= "check"] path {
@@ -864,6 +868,9 @@
   span[class][data-icon = "down"] {
     fill-opacity: 0.55;
   }
+  span[class][data-icon = "down"] path {
+    fill: var(--white) !important;
+  }
   div:not(#z)[style ^= "transform-origin:"] {
     border: 1px solid var(--darker);
     border-radius: var(--radius);
@@ -898,29 +905,29 @@
   div:not(#z)[style ^= "transform-origin:"] li:not(:hover) [data-icon] path {
     fill-opacity: 0.55 !important;
   }
-  div:not(#z)[style ^= "transform-origin:"]._1fRWV {
+  div:not(#z)[style ^= "transform-origin:"].XhRTI {
     background-color: var(--t) !important;
     border: none !important;
     box-shadow: none !important;
   }
-  div:not(#z)[style ^= "transform-origin:"]._1fRWV li {
+  div:not(#z)[style ^= "transform-origin:"].XhRTI li {
     background-color: var(--t) !important;
   }
-  div:not(#z)[style ^= "transform-origin:"]._1fRWV .Ijb1Q::after {
+  div:not(#z)[style ^= "transform-origin:"].XhRTI ._1azEi::after {
     box-shadow: var(--bshadow) !important;
   }
-  div:not(#z)[style ^= "transform-origin:"]._1fRWV ._3Fjw5 {
+  div:not(#z)[style ^= "transform-origin:"].XhRTI ._2Par4 {
     color: var(--light) !important;
     background-color: var(--darker) !important;
     box-shadow: var(--bshadow);
   }
-  div:not(#z)[style ^= "transform-origin:"] > ul._3z3lc li._1sHYl {
+  div:not(#z)[style ^= "transform-origin:"] > ul._2imug li._1exov {
     background-color: var(--t) !important;
   }
-  div:not(#z)[style ^= "transform-origin:"] > ul._3z3lc > li:first-child {
+  div:not(#z)[style ^= "transform-origin:"] > ul._2imug li:first-child {
     border-color: var(--darker) !important;
   }
-  div:not(#z)[style ^= "transform-origin:"] > ul._3z3lc + [data-animate-dropdown-nib] {
+  div:not(#z)[style ^= "transform-origin:"] > ul._2imug + [data-animate-dropdown-nib] {
     border-bottom: 1px solid var(--darker);
     border-right: 1px solid var(--darker);
     bottom: -8px;
@@ -975,7 +982,7 @@
     border-bottom: 1px solid var(--darker);
     background-color: var(--darken) !important;
   }
-  div[class *= "gQzdc"]._19OGD {
+  div[class *= "gQzdc"]._3sdhb {
     background-color: var(--dark) !important;
   }
   div[class *= "gQzdc"]::after {
@@ -994,6 +1001,12 @@
   }
   div[class *= "gQzdc"] > div + label:focus-within {
     background-color: var(--t) !important;
+  }
+  div[class *= "gQzdc"] > span > button {
+    right: 20px !important;
+  }
+  div[class *= "gQzdc"] > span > div {
+    right: 22px !important;
   }
   ._2HS9r {
     background-color: var(--t) !important;
@@ -1104,18 +1117,28 @@
     color: var(--light) !important;
   }
   ._2EXPL ._3Bxar,
-  ._2EXPL ._1AwDx {
+  ._2EXPL ._1AwDx,
+  ._1jd1m {
     color: var(--lighter) !important;
   }
-  ._2EXPL._30Q1W :not(#z) {
+  ._2EXPL._2EXPL:not(#z) ._25Ooe {
+    color: var(--light) !important;
+  }
+  ._2EXPL._2EXPL:not(#z) ._1AwDx div {
     color: var(--lighter) !important;
   }
-  ._2EXPL._3fAgu {
+  ._2EXPL._3ntaf {
     border-top: none !important;
   }
-  ._2EXPL._27Ppf {
+  ._2EXPL._13iu_ {
     height: 25px !important;
+  }
+  ._2EXPL._13iu_,
+  ._2EXPL._13iu_:not(#z):hover {
     background-color: var(--darker) !important;
+  }
+  ._2EXPL._13iu_ [role = "button"]:hover {
+    background-color: var(--dark) !important;
   }
   ._1-iDe .copyable-area ._1CkkN {
     border-bottom: 1px solid var(--darker);
@@ -1163,13 +1186,13 @@
     color: var(--accent) !important;
     background-color: var(--t) !important;
   }
-  ._3p0T6 {
+  ._1jJLh {
     background-color: var(--accent) !important;
   }
-  ._3p0T6.w4k6i {
+  ._1jJLh.w4k6i {
     background-color: var(--t) !important;
   }
-  ._3p0T6.w4k6i path {
+  ._1jJLh.w4k6i path {
     fill-opacity: 0.55;
   }
   ._3YwRO {
@@ -1212,10 +1235,21 @@
   ._1-iDe .copyable-area ._1i7uJ {
     background-color: var(--darker) !important;
   }
+  ._2rXhY {
+    color: var(--lighter) !important;
+  }
+  ._1BLxK {
+    color: var(--accent) !important;
+    background-color: var(--t) !important;
+  }
+  ._2WSfN {
+    color: var(--accent) !important;
+    background-color: var(--darken) !important;
+  }
   ._1-iDe .copyable-area .ZIgPi {
     color: var(--light) !important;
   }
-  ._14VS3 .copyable-area [style *= "height: 200px"] ._2EaHs {
+  ._14VS3 .copyable-area [style *= "height: 200px"] > div {
     background-color: var(--dark) !important;
   }
   ._14VS3 .copyable-area .iYPsH {
@@ -1282,7 +1316,7 @@
   ._14VS3 .copyable-area ._2flas span {
     color: var(--accent) !important;
   }
-  ._14VS3 .copyable-area ._19xqi {
+  ._14VS3 .copyable-area .Um7sh {
     background-color: var(--t) !important;
     box-shadow: 0 1px var(--darker);
   }
@@ -1411,7 +1445,7 @@
     background-color: var(--darken) !important;
     box-shadow: var(--bshadow), inset 0 0 0 1px var(--darker), inset 0 -3px var(--darker);
   }
-  #main .Zq3Mc.S-bQb {
+  #main .Zq3Mc._14b5J {
     color: var(--orange) !important;
   }
   #main .Zq3Mc:not(.tail) {
@@ -1461,9 +1495,6 @@
   ._1o1sm:hover::before,
   ._1o1sm._2nOMz::before {
     background-color: var(--accent) !important;
-  }
-  ._1o1sm._21W00::before {
-    background-color: var(--t) !important;
   }
   #main .copyable-area > div[tabindex]._3D9Wd ._1VD7W {
     border-color: var(--accent) !important;
@@ -1526,9 +1557,11 @@
   ._1sGGp div > div:nth-child(3) span {
     color: var(--light) !important;
   }
+  #main .copyable-area > div[tabindex] ._18dOq,
   #main .copyable-area > div[tabindex] ._1upWv {
     color: var(--lighter) !important;
   }
+  #main .copyable-area > div[tabindex] ._18dOq [data-icon] path,
   #main .copyable-area > div[tabindex] ._1upWv [data-icon] path {
     fill: var(--lighter);
   }
@@ -1542,10 +1575,10 @@
   ._3DBC1 [role = "button"] {
     color: var(--light) !important;
   }
-  ._1mrMQ {
+  ._2RBFb {
     background-color: var(--dark) !important;
   }
-  ._1o0MN {
+  ._2DwXW {
     color: var(--lighter) !important;
   }
   ._3_nIn {
@@ -1644,15 +1677,15 @@
     border-radius: 7.5px;
     background-color: var(--darken) !important;
   }
-  .message-in .video-thumb ._3_IKd,
-  .message-out .video-thumb ._3_IKd {
+  .message-in .video-thumb ._1Ppwx,
+  .message-out .video-thumb ._1Ppwx {
     padding: 2px 5px;
     border-radius: 7.5px;
     color: var(--light) !important;
     background-color: var(--dark) !important;
   }
-  .message-in .video-thumb + div > ._3MYI2,
-  .message-out .video-thumb + div > ._3MYI2 {
+  .message-in .video-thumb + div > [role = "button"],
+  .message-out .video-thumb + div > [role = "button"] {
     padding: 2px 5px;
     border-radius: 7.5px;
     color: var(--light) !important;
@@ -1689,26 +1722,18 @@
   }
   .message-in > div > span:last-child > div[style]:not(._1UyGF),
   ._1i1U7.jZ4tp {
+    height: 20px !important;
     background: linear-gradient(90deg, var(--t), var(--msg-l) 80%) !important;
   }
   ._1i1U7._1UyGF div[style *= "opacity"] {
     background-color: var(--msg-l) !important;
   }
-  .message-in > div > span:last-child > div[style]._20WGU {
-    background: linear-gradient(30deg, var(--t) 65%, rgba(68,68,68,0.333) 120%) !important;
+  .message-in > div > span:last-child > div[style]._20WGU,
+  .message-in > div > span:last-child > div[style].LSBf- {
+    background: linear-gradient(30deg, var(--t) 60%, var(--shadow)) !important;
   }
   .message-in > div > span:last-child > div[style]._38wik._2Nkc4 {
     background: linear-gradient(270deg, var(--t), var(--msg-l) 80%) !important;
-  }
-  .message-in > div > span:nth-last-child(2) > div[style]._15CAo._2Nkc4 {
-    background: linear-gradient(90deg, var(--t), var(--msg-l) 80%) !important;
-  }
-  .message-in > div > span:nth-last-child(2) > div[style]._15CAo._3EQsG {
-    height: 23px;
-    background: linear-gradient(90deg, var(--t), var(--msg-l) 80%) !important;
-  }
-  .message-in > div > span:nth-last-child(2) > div[style]._15CAo._3WZEQ {
-    background: linear-gradient(90deg, var(--t), var(--dark) 60%) !important;
   }
   .message-in ._1iJeo {
     background-color: var(--dark) !important;
@@ -1752,21 +1777,18 @@
   ._1i1U7._1qhoQ div[style *= "opacity"] {
     background-color: var(--msg-r) !important;
   }
-  .message-out > div > span:last-child > div[style]._20WGU {
-    background: linear-gradient(30deg, var(--t) 65%, rgba(68,68,68,0.333) 120%) !important;
+  .message-out > div > span:last-child > div[style]._20WGU,
+  .message-out > div > span:last-child > div[style].LSBf- {
+    background: linear-gradient(30deg, var(--t) 60%, var(--shadow)) !important;
   }
   .message-out > div > span:last-child > div[style]._38wik._3EQsG {
     background: linear-gradient(270deg, var(--t), var(--msg-r) 80%) !important;
   }
-  .message-out > div > span:nth-last-child(2) > div[style]._15CAo._2Nkc4 {
-    background: linear-gradient(90deg, var(--t), var(--msg-r) 80%) !important;
-  }
-  .message-out > div > span:nth-last-child(2) > div[style]._15CAo._3EQsG {
-    height: 23px;
-    background: linear-gradient(90deg, var(--t), var(--msg-r) 80%) !important;
-  }
-  .message-out > div > span:nth-last-child(2) > div[style]._15CAo._3WZEQ {
+  .message-out > div > span:nth-last-child(2) > div[style]._1i1U7 {
     background: linear-gradient(90deg, var(--t), var(--dark) 60%) !important;
+  }
+  .message-out > div > span:nth-last-child(2) > div[style].jZ4tp {
+    background: linear-gradient(90deg, var(--t), var(--msg-r) 80%) !important;
   }
   .message-out ._1iJeo {
     background-color: var(--dark) !important;
@@ -1991,7 +2013,7 @@
     background-color: var(--dark) !important;
     box-shadow: var(--bshadow), inset 0 1px var(--darker) !important;
   }
-  ._1F9Ap:not(#z) {
+  ._3Ye_R:not(#z) {
     color: var(--lighter) !important;
   }
   #main > footer .rstyJ > div:first-child:not(#z) {
