--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      2.3.1
+@version      2.3.2
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -185,8 +185,8 @@
         --ui-font   : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
             'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
 
-        --version   : 'Dark-WhatsApp v2.3.1 — March 27th, 2020';
-        --message   : 'Hotfix for the latest update is out, report broken things on GitHub so that we can fix them. 🎉 🥳 I published an important update about my userstyles, please read it: ';
+        --version   : 'Dark-WhatsApp v2.3.2 — March 27th, 2020';
+        --message   : 'Another update is out, report broken things on GitHub so that we can fix them. 🎉 🥳 I published an important update about my userstyles, please read it: ';
         --changes   : 'https://vednoc.me/blog/the-end-of-an-era';
     }
 
