global: fix hover for emoji and context menu items

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -989,7 +989,7 @@
             /// Items.
             li {
                 transition: background 0.2s ease;
-                &._3VXiW { c: 0 0 bd }
+                &._1exov { c: 0 0 bd }
                 div, span {
                     c: cm;
                     transition: 0.2s ease;
@@ -1017,8 +1017,8 @@
                 }
             }
             /// Emojis -> Race selection.
-            > ul._2imug {
-                li._1exov { c: 0 0 t }
+            /.P_A-m:not(#z) ul {
+                li { &:hover, &._1exov { c: 0 0 t }}
                 li:first-child { c: 0 bd }
                 + [data-animate-dropdown-nib] {
                     border-bottom: 1px solid bd;
