global: add default thumb color for audio messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -477,8 +477,10 @@
                 + ::-moz-range {
                     &-progress, &-thumb { c: 0 0 ac }
                     &-track { height: 2px; c: 0 0 gray }
-                    /// Track color.
+                    /// Track default color.
                     /._4_92b::-moz-range-track { c: 0 0 gray }
+                    /// Thumb default color.
+                    /._3L8ub ._4_92b::-moz-range-thumb { c: 0 0 fg 0 0 0 }
                     /// Playing state.
                     /.bB3vH._38DlQ ._4_92b::-moz-range-thumb { c: 0 0 ac }
                 }
