left: fix active state for starred messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1249,6 +1249,8 @@
                     c: 0 0 bd;
                 }
                 &::after { content: none }
+                /// States.
+                &._1baOM:not(#z) { c: 0 0 bd }
                 &._2-mCk, &.ZuHmv { c: 0 0 #55555510 }
                 /._3WZoe, ._1bcjS, ._2-rkJ::before { c: cm }
                 /// Reset tails.
