chat: fix 'shared contact' icon and context menu

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1564,6 +1564,7 @@
         /// Embeds -> Shared contact.
         /._1YNgi {
             div[style *= 'base64'] { filter: none i }
+            div[style *= 'height'] { c: 0 0 bg }
             ._3gkvk { c: fg }
             /// Multiple contacts.
             /._3BtGF, /.mc_ET { c: 0 bg t }
@@ -1709,7 +1710,7 @@
             > div > span:last-child > div[style] {
                 /// Non-stickers | Groups -> Combined stickers.
                 &:not(._1UyGF), /._1i1U7.jZ4tp {
-                    height: 20px i;
+                    height: 22px i;
                     background: linear-gradient(90deg, t, left 80%) i;
                 }
                 /// Stickers.
@@ -1766,6 +1767,8 @@
                 &:not(._1qhoQ) { background: linear-gradient(90deg, t, right 80%) i }
                 /// Stickers.
                 /._1i1U7._1qhoQ div[style *= 'opacity'] { c: 0 0 right }
+                /// Shared contacts.
+                &._2DNgV.o4dWJ { background: linear-gradient(30deg, t, right) i }
                 /// Images/Videos.
                 &._20WGU, &.LSBf- {
                     background: linear-gradient(30deg, t 60%, sh) i;
