modals: fix status area backdrop and misc colors

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -792,7 +792,7 @@
         &::before {
             content: '';
             z-index: -1;
-            opacity: 0.91;
+            opacity: 0.81;
             position: absolute;
             top: 0; right: 0; bottom: 0; left: 0;
             c: 0 0 bg;
@@ -819,12 +819,12 @@
                 ._26-u- { c: fg }
             }
             > div[class]:nth-child(2) {
-                .ojaNO { c: cm }
+                ._2LuDL { c: cm }
                 /// Reset the circle icon.
                 svg[width][height] path { v: cm }
             }
             /// Remove borders from list items.
-            ._2UaNq { border-top: none }
+            ._2EXPL { border-top: none }
             /// Reply to the status.
             /.QRsOy { c: 0 0 bg }
             /// Feat -> Fullscreen mode.
