left: fix colors in 'computer not connected' alert
Closes #140.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1061,7 +1061,7 @@
                 c: 0 0 hl;
             }
             /// Disconnected/connecting.
-            ._1UvQg {
+            ._1UvQg, .MwhOx {
                 * { c: yellow }
                 [data-icon ^= 'chevron-'] path { fill: yellow }
                 [data-icon ^= 'alert-'] path {
@@ -1078,6 +1078,7 @@
                 if ( alerts ==  'notifications' ) { display: none i }
             }
             /// Phone battery low.
+            /// TODO: Fix the selectors.
             ._2t3oV {
                 * { c: red }
                 [data-icon ^= 'chevron-'] path { v: red }
